# 15PuzzleSolver3

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
nodePuz/: nodePuz.cpp  nodePuz.hpp  tracker.cpp  tracker.hpp
solver/: basic_solvers.cpp  pro_solvers.cpp  solver.hpp
